--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: coursier/cache-action@v6.3
-      - uses: VirtusLab/scala-cli-setup@v0.1
+      - uses: coursier/cache-action@v6
+      - uses: VirtusLab/scala-cli-setup@main
       - name: Tests
         run: make test
