ci: add build step to package the app in release mode

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ name: main
 on:
   push:
     branches:
-    - '*'
+      - "*"
 
 jobs:
-  build:
+  test:
     runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v3
@@ -16,3 +16,10 @@ jobs:
       - uses: VirtusLab/scala-cli-setup@main
       - name: Tests
         run: make test
+
+  build:
+    runs-on: "ubuntu-latest"
+    needs: test
+    steps:
+      - name: Release
+        run: make release
