ci: fix upload and add deploy to gh pages

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path:
-            - "index.html"
-            - "App.js"
-            - "styles/"
+          path: '.'
+     - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
